[project]
name = "fitness recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
